<resources>
    <string name="app_name">StuRevu</string>
    <string name="action_settings">Settings</string>
    <string name="menu">Menu</string>

    <string name="menu_settings">Settings</string>
    <string name="title_activity_college_list">StuRevu</string>
    <string name="title_activity_new_review">NewReviewActivity</string>

    <string name="action_refresh">Refresh List</string>
    <string name="action_show_uni_list">Only Show Universities</string>
    <string name="action_review_add">Add a Review</string>
    <string name="action_comment_add">Add a Comment</string>
    <string name="action_college_add">Add a College</string>
    <string name="action_course_add">Add a Course</string>
    <string name="action_clubsoc_add">Add a Club or Society</string>

    <string name="menu_title">Menu</string>
    <string name="logout">Logout</string>

    <string name="review_label">New Review Title</string>
    <string name="college_label">New College Name</string>
    <string name="course_label">New Course Name</string>
    <string name="module_label">New Module Name</string>
    <string name="module_description_label">New Module Description</string>
    <string name="clubsoc_label">New Club/Society Name</string>
    <string name="course_description_label">New Course Description</string>
    <string name="clubsoc_description_label">New Club/Society Description</string>
    <string name="clubsoc_type_label">New Club/Society Type</string>
    <string name="avgratinglabel">"Average Rating : "</string>
    <string name="revcountlabel">"Reviews : "</string>
    <string name="coursecountlabel">"Courses : "</string>
    <string name="clubsoccountlabel">"Clubs &#038; Societies : "</string>
    <string name="modulecountlabel">"Modules : "</string>
    <string name="report_label">Report Content</string>

    <string name="save_button_text">Save</string>
    <string name="cancel_button_text">Cancel</string>

    <string name="college">College</string>
    <string name="action_collegeMap">Map of Third Level Institutions</string>
    <string name="college_out_of_range">Can\'t view college! Get closer.</string>
    <string name="facebook_app_id">214166528974642</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="search_course_hint">Search Courses</string>
    <string name="search_college_hint">Search Colleges</string>
    <string name="search_button">Search</string>
    <string name="error">Error</string>
    <string name="inputValidation">Input value can\'t be null, please enter or select a value.</string>
    <string name="app_label">app label</string>
    <string name="search_hint">Search....</string>
    <string name="action_fav">Save to Favourites</string>
    <string name="action_report">Report Content</string>
    <string name="action_search">Search</string>
    <string name="comment_label">New Comment Title</string>
    <string name="commentcountlabel">Comments : </string>
    <string name="share">Share on Facebook</string>
    <string name="profile_title_logged_in">Your are logged in as</string>
    <string name="profile_logout_button_label">Log out</string>
    <string name="profile_title_logged_out">You must be logged in to view your profile</string>
    <string name="profile_login_button_label">Log in</string>
    <string name="course_name_hint">English</string>
    <string name="course_description_hint">BSc Hons English</string>
    <string name="module_name_hint">Project</string>
    <string name="module_description_hint">Final Year Software Project</string>
    <string name="clubsoc_name_hint">Chess Club</string>
    <string name="clubsoc_description_hint">University of Example Chess Club</string>

    <string name="fav_colleges_btn">Favourite Colleges</string>
    <string name="fav_courses_btn">Favourite Courses</string>
    <string name="fav_clubsocs_btn">Favourite Clubs &#038; Societies</string>
    <string name="fav_modules_btn">Favourite Modules</string>

    <string name="fav_college_rev_btn">Favourite College Reviews</string>
    <string name="fav_course_rev_btn">Favourite Course Reviews</string>
    <string name="fav_clubsoc_rev_btn">Favourite Club &#038; Society Reviews</string>
    <string name="fav_module_rev_btn">Favourite Module Reviews</string>

    <string name="my_college_rev_btn">My College Reviews</string>
    <string name="my_course_rev_btn">My Course Reviews</string>
    <string name="my_clubsoc_rev_btn">My Club &#038; Society Reviews</string>
    <string name="my_module_rev_btn">My Module Reviews</string>

    <string name="instruction">Enter the words above</string>
    <string name="verify">Verify</string>
    <string name="reload">Reload</string>
    <string name="show_error">Failed to show CAPTCHA</string>
    <string name="verification_success">Your answer is verified successfully</string>
    <string name="verification_failed">You did not enter the CAPTCHA phrase correctly</string>

    <!-- Google Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>


    <string-array name="ratings_array">
        <item></item>
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
    </string-array>

    <string-array name="college_type_array">
        <item></item>
        <item>University</item>
        <item>Institute of Technology</item>
        <item>Third Level Institute</item>
        <item>Online</item>
    </string-array>

    <string-array name="student_type_array">
        <item></item>
        <item>EU</item>
        <item>International</item>
    </string-array>

    <string-array name="course_level_array">
        <item></item>
        <item>Undergraduate</item>
        <item>Postgraduate</item>
    </string-array>

    <string-array name="clubsoc_type_array">
        <item></item>
        <item>Club</item>
        <item>Society</item>
    </string-array>

    <string-array name="mode_of_study_array">
        <item></item>
        <item>Full Time</item>
        <item>Part Time</item>
    </string-array>

    <string-array name="qualification_type_array">
        <item></item>
        <item>Higher Certificate</item>
        <item>Ordinary Bachelor Degree</item>
        <item>Honours Bachelor Degree</item>
        <item>Higher Diploma</item>
        <item>Postgraduate Diploma</item>
        <item>Masters Degree</item>
    </string-array>

    <string-array name="course_duration_array">
        <item></item>
        <item>1 year</item>
        <item>2 years</item>
        <item>3 years</item>
        <item>4 years</item>
    </string-array>

    <string-array name="module_course_year_array">
        <item></item>
        <item>Year 1</item>
        <item>Year 2</item>
        <item>Year 3</item>
        <item>Year 4</item>
    </string-array>

    <string-array name="module_type_array">
        <item></item>
        <item>Core</item>
        <item>Optional</item>
    </string-array>

    <string-array name="navigation_drawer_menu_array">
        <item>Home</item>
        <item>College List</item>
        <item>Course Search</item>
        <item>Favourite Colleges</item>
        <item>Favourite Courses</item>
        <item>Favourite College Reviews</item>
        <item>Favourite Course Reviews</item>
        <item>My College Reviews</item>
        <item>My Course Reviews</item>
    </string-array>

    <string-array name="report_type_array">
        <item></item>
        <item>Spam</item>
        <item>Abuse</item>
        <item>Duplicate</item>
        <item>Other</item>
    </string-array>

    <string-array name="college_country_array">
        <item></item>
        <item>England</item>
        <item>Northern Ireland</item>
        <item>Republic of Ireland</item>
        <item>Scotland</item>
        <item>Wales</item>
    </string-array>

</resources>
