<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_title"
        android:orderInCategory="100"
        android:title="@string/menu_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/refresh"
        android:title="@string/action_refresh"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/action_show_uni"
        android:icon="@drawable/uni_icon"
        android:title="@string/action_show_uni_list"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/action_show_map"
        android:icon="@drawable/map"
        android:title="@string/action_collegeMap"
        app:showAsAction="always"></item>


</menu>