<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="ie.ncirl.jordandaly.classdoor.FavouritesActivity">

        <include
            android:id="@+id/toolbar_main"
            layout="@layout/toolbar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <com.dd.processbutton.FlatButton
            android:id="@+id/favCollegesButtonId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar_main"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="9dp"
            android:drawableLeft="@drawable/list_white_small_icon"
            android:text="@string/fav_colleges_btn"
            android:textColor="@android:color/white"
            custom:pb_colorNormal="@android:color/holo_blue_dark"
            custom:pb_colorPressed="@android:color/holo_blue_light" />

        <com.dd.processbutton.FlatButton
            android:id="@+id/favCoursesButtonId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/favCollegesButtonId"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="9dp"
            android:drawableLeft="@drawable/list_white_small_icon"
            android:text="@string/fav_courses_btn"
            android:textColor="@android:color/white"
            custom:pb_colorNormal="@android:color/holo_blue_dark"
            custom:pb_colorPressed="@android:color/holo_blue_light" />

        <com.dd.processbutton.FlatButton
            android:id="@+id/favClubSocsButtonId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/favCoursesButtonId"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="9dp"
            android:drawableLeft="@drawable/list_white_small_icon"
            android:text="@string/fav_clubsocs_btn"
            android:textColor="@android:color/white"
            custom:pb_colorNormal="@android:color/holo_blue_dark"
            custom:pb_colorPressed="@android:color/holo_blue_light" />

        <com.dd.processbutton.FlatButton
            android:id="@+id/favModulesButtonId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/favClubSocsButtonId"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="9dp"
            android:drawableLeft="@drawable/list_white_small_icon"
            android:text="@string/fav_modules_btn"
            android:textColor="@android:color/white"
            custom:pb_colorNormal="@android:color/holo_blue_dark"
            custom:pb_colorPressed="@android:color/holo_blue_light" />


        <com.dd.processbutton.FlatButton
            android:id="@+id/favCollegeReviewsButtonId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/favModulesButtonId"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:drawableLeft="@drawable/list_white_small_icon"
            android:text="@string/fav_college_rev_btn"
            android:textColor="@android:color/white"
            custom:pb_colorNormal="@android:color/holo_blue_dark"
            custom:pb_colorPressed="@android:color/holo_blue_light" />

        <com.dd.processbutton.FlatButton
            android:id="@+id/favCourseReviewsButtonId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/favCollegeReviewsButtonId"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="9dp"
            android:drawableLeft="@drawable/list_white_small_icon"
            android:text="@string/fav_course_rev_btn"
            android:textColor="@android:color/white"
            custom:pb_colorNormal="@android:color/holo_blue_dark"
            custom:pb_colorPressed="@android:color/holo_blue_light" />>

        <com.dd.processbutton.FlatButton
            android:id="@+id/favClubSocReviewsButtonId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/favCourseReviewsButtonId"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="9dp"
            android:drawableLeft="@drawable/list_white_small_icon"
            android:text="@string/fav_clubsoc_rev_btn"
            android:textColor="@android:color/white"
            custom:pb_colorNormal="@android:color/holo_blue_dark"
            custom:pb_colorPressed="@android:color/holo_blue_light" />/>

        <com.dd.processbutton.FlatButton
            android:id="@+id/favModuleReviewsButtonId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/favClubSocReviewsButtonId"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="9dp"
            android:drawableLeft="@drawable/list_white_small_icon"
            android:text="@string/fav_module_rev_btn"
            android:textColor="@android:color/white"
            custom:pb_colorNormal="@android:color/holo_blue_dark"
            custom:pb_colorPressed="@android:color/holo_blue_light" />


    </RelativeLayout>

    <!-- Side navigation drawer UI -->
    <ListView
        android:id="@+id/navList"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:background="#ffeeeeee" />

</android.support.v4.widget.DrawerLayout>