<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewReviewFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/report_label"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/report_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/report_type_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/report_text"
            android:layout_marginLeft="5dp"
            android:text="Type"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/report_type_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/report_type_label"
            android:entries="@array/student_type_array" />


        <com.dd.processbutton.FlatButton
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/save_icon_small_white"
            android:text="@string/save_button_text"
            android:textColor="@android:color/white"
            custom:pb_colorNormal="@android:color/holo_green_light"
            custom:pb_colorPressed="@android:color/holo_green_dark" />

        <com.dd.processbutton.FlatButton
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/cancel_icon_small_white"
            android:text="@string/cancel_button_text"
            android:textColor="@android:color/white"
            custom:pb_colorNormal="@android:color/holo_red_light"
            custom:pb_colorPressed="@android:color/holo_red_dark" />

    </LinearLayout>
</ScrollView>

