<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <TextView
        android:id="@+id/mode_of_study"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="50sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/course_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/init"
        android:layout_centerHorizontal="true"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/avgratinglabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:text="@string/avgratinglabel"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/avg_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_toRightOf="@+id/avgratinglabel"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/revcountlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/avgratinglabel"
        android:text="@string/revcountlabel"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/rev_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/avgratinglabel"
        android:layout_toRightOf="@+id/revcountlabel"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/modulecountlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/revcountlabel"
        android:text="@string/modulecountlabel"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/module_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/revcountlabel"
        android:layout_toRightOf="@+id/modulecountlabel"
        android:textSize="25sp" />


    <com.dd.processbutton.FlatButton
        android:id="@+id/reviewsButtonId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/module_count"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="9dp"
        android:text="Reviews"
        android:textColor="@android:color/white"
        custom:pb_colorNormal="@android:color/holo_blue_light"
        custom:pb_colorPressed="@android:color/holo_blue_dark" />

    <com.dd.processbutton.FlatButton
        android:id="@+id/modulesButtonId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reviewsButtonId"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="Modules"
        android:textColor="@android:color/white"
        custom:pb_colorNormal="@android:color/holo_blue_light"
        custom:pb_colorPressed="@android:color/holo_blue_dark" />


</RelativeLayout>